not quite ready for prime time

--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
 		.script("/assets/js/jquery.sudoku.js").wait(function(){
 			Sudoku.init();
 		})
-		.script("/assets/js/jquery.popup.pack.js").wait(function(){
+		.script("/assets/js/jquery.popup.js").wait(function(){
 			$('.popup').popups();
 		});
 	</script>
