--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,7 @@
 	<script type="text/javascript">
 	$LAB
 		.script("/assets/js/jquery.min.js")
+		.script("/assets/js/jquery.mobile.min.js")
 		.script("/assets/js/jquery.tmpl.pack.js")
 		.script("/assets/js/jquery.tmpload.min.js")
 		.script("/assets/js/jquery.cookie.pack.js")
